--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,8 @@
-name: Build
+name: Release
 
 on:
-  pull_request:
-    branches:
-      - '*'
-  push:
-    branches:
-      - 'master'
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -18,4 +14,4 @@ jobs:
       with:
         java-version: 1.6
     - name: "Build"
-      run: ./gradlew build
+      run: ./gradlew build -Pversion=${GITHUB_REF:10}
