--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,5 @@ jobs:
         java-version: 1.8
     - name: "Build"
       run: ./gradlew build -Pversion=${GITHUB_REF:10}
+    - name: "Publish"
+      run: ./gradlew publish -Pversion=${GITHUB_REF:10}
