--- a/samples/junit4-android/src/main/AndroidManifest.xml
+++ b/samples/junit4-android/src/main/AndroidManifest.xml
@@ -15,5 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CrashActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 </manifest>
