skip unit tests for samples

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         java-version: 1.8
     - name: "Build"
-      run: ./gradlew build
+      run: ./gradlew build -x :samples:junit4-android:testReleaseUnitTest -x :samples:junit4-android:testDebugUnitTest
