--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 version=1.0-SNAPSHOT
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.vfs.watch=true
