Add TestStorageResultsWriter to write test results into sdcard when using androidx test orchestrator

--- a/samples/junit4-android/src/androidTest/resources/allure.properties
+++ b/samples/junit4-android/src/androidTest/resources/allure.properties
@@ -1,2 +1,3 @@
+allure.results.useTestStorage=true
 allure.results.directory=allure-results
 allure.link.issue.pattern=https://jira.domain-name.com/browse/{}
